# nogo-analyzer

./: MODULE.bazel  README.md
private/: deps.bzl
private/cmd/buildprune/: BUILD.bazel
private/cmd/deps-prune/: BUILD.bazel
staticcheck/: BUILD.bazel
staticcheck/cmd/gen_config/: BUILD.bazel
staticcheck/cmd/list_analyzers/: BUILD.bazel
staticcheck/tests/: BUILD.bazel  staticcheck_test.go
staticcheck/util/: BUILD.bazel
