module(
    name = "com_github_sluongng_nogo_analyzer",
    version = "0.0.1",
)
bazel_dep(name = "io_bazel_rules_go", version = "0.49.0")
bazel_dep(name = "bazel_gazelle", version = "0.37.0")
bazel_dep(name = "com_google_protobuf", version = "4.25.0")
bazel_dep(name = "bazel_features", version = "1.12.0")
